# ScoutMasterAPI-builder

./: .gitignore  API_ScoutMaster_V2.py  LICENSE  README.md  pyproject.toml  setup.py
examples/: crops.ipynb  fields.ipynb  layer_types.ipynb  layers.ipynb  projects.ipynb
examples/crops/: show_crops.ipynb
examples/culltivations/: show_cultivations.ipynb  show_cultivations_tsum.ipynb  show_field_cultivations.ipynb
examples/fields/: create_field.ipynb  field_by_id.ipynb  fields.ipynb  show_fields.ipynb  upload_many_fields.ipynb
examples/layers/: create_layers.ipynb  layers.ipynb
examples/layertypes/: layer_types.ipynb
examples/observations/: create_observation.ipynb  observations.ipynb  show_observations.ipynb
examples/projects/: create_project.ipynb  show_projects.ipynb
examples/users/: show_fields.ipynb
models/: Record_string.py  __init__.py
openapi/: swagger-v3.json
scoutmaster/: api.py  base.py  crops.py  cultivations.py  fields.py  invites.py  layers.py  layertypes.py  observations.py  observationsparameters.py  projects.py  reports.py  services.py  subscriptions.py
scoutmasterapi_builder/: api.py  base.py  benchmarking.py  crops.py  cultivations.py  environments.py  fields.py  invites.py  layers.py  layertypes.py  observations.py  observationsparameters.py  projects.py  reports.py  researches.py  services.py  subscriptions.py  users.py
