[project]
name = "scoutmasterapi_builder"
version = "0.0.1"
description = "ScoutMaster API client"
readme = "README.md"
license = { file="LICENSE" }
authors = [
  { name="Rinus Vijftigschild", email="rinus.vijftigschild@aerovision.nl"},
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LicenseRef-Proprietary",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project.urls]
"Homepage" = "https://github.com/AeroVision-code/ScoutMasterAPI-builder"
